--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.0.14"
   },
   "devDependencies": {
